--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "# Visualization \n",
     "\n",
-    "`cidre` package provides APIs to visualize small groups. To use this APIs, first of all, we need some additional libraries"
+    "`cidre` package provides an API to visualize small groups. To use this API, first of all, we need some additional libraries"
    ],
    "cell_type": "markdown",
    "metadata": {}
