incorporate naoki's comments

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# About this notebook\n",
     "\n",
-    "In this notebook, we will apply CIDRE to a network with communities and demonstrate how to use CIDRE and visualize the detected groups.\n",
+    "In this notebook, we apply CIDRE to a network with communities and demonstrate how to use CIDRE and visualize the detected groups.\n",
     "\n",
     "To start, we'll need some basic libraries.\n"
    ],
@@ -48,7 +48,7 @@
   },
   {
    "source": [
-    "Next, we will need a network to test CIDRE. "
+    "Next, we load a network to test CIDRE. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -70,41 +70,109 @@
   },
   {
    "source": [
-    "This network consists of several communities. The group membership can be obtained by"
+    "A key feature of CIDRE is to filter out community structure that overshadow anomalous groups in networks. Here, we use `graph-tool` package to get the community membebership of nodes. \n",
+    "\n",
+    "First of all, install `graph-tool` by "
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "# Get group membership\n",
-    "group_membership = node_table[\"group_id\"]"
+    "!conda install -y -c conda-forge graph-tool"
    ],
    "cell_type": "code",
    "metadata": {},
    "execution_count": 3,
-   "outputs": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n"
+     ]
+    }
+   ]
   },
   {
    "source": [
-    "Now, we have all data to run CIDRE. Create `cidre.Cidre` object and pass `group_membership` along with some key parameters."
+    "Now, let's detect communities using `graph-tool`. We fit the degree-corrected stochastic block model (dcSBM) to the network and consider each block as a community. Here we limit the number of communities to be less than three. This is crucial because otherwise the stochastic block model may overfit to the anomalous groups, i.e., anomalous groups might be detected as communities.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg = cidre.Cidre(group_membership = group_membership, alpha = 0.01, min_edge_weight = 1)"
+    "import graph_tool.all as gt\n",
+    "def detect_community(A, K = None, **params):\n",
+    "    \"\"\"Detect communities using graph-tool package\n",
+    "\n",
+    "    :param A: adjacency matrix\n",
+    "    :type A: scipy.csr_sparse_matrix\n",
+    "    :param K: Maximum number of communities\n",
+    "    :type K: int\n",
+    "    :param params: parameters passed to graph_tool.gt.minimize_blockmodel_dl\n",
+    "    \"\"\"\n",
+    "    def to_graph_tool_format(adj, membership=None):\n",
+    "        g = gt.Graph(directed=True)\n",
+    "        r, c, v = sparse.find(adj)\n",
+    "        nedges = v.size\n",
+    "        edge_weights = g.new_edge_property(\"double\")\n",
+    "        g.edge_properties[\"weight\"] = edge_weights\n",
+    "        g.add_edge_list(\n",
+    "            np.hstack([np.transpose((r, c)), np.reshape(v, (nedges, 1))]),\n",
+    "            eprops=[edge_weights],\n",
+    "        )\n",
+    "        return g\n",
+    "    G = to_graph_tool_format(A)\n",
+    "\n",
+    "    states = gt.minimize_blockmodel_dl(\n",
+    "        G,\n",
+    "        state_args=dict(eweight=G.ep.weight),\n",
+    "        multilevel_mcmc_args = {\"B_max\": K },\n",
+    "        **params\n",
+    "    )\n",
+    "    b = states.get_blocks()\n",
+    "    return np.unique(np.array(b.a), return_inverse = True)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_membership = detect_community(A, K = 3) "
    ]
   },
   {
    "source": [
-    "- `alpha` (defaults to 0.01) is the statistical significance level for anomalous edges.\n",
-    "- `min_edge_weight` is the threshold of the edge weights, i.e., the edges with weight less than this value will be removed prior to detecting groups.\n",
+    "Now, we input a network and its community structure to CIDRE. TO this end, create `cidre.Cidre` object and pass `group_membership` along with some key parameters."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alg = cidre.Cidre(group_membership = group_membership, alpha = 0.05, min_edge_weight = 1)"
+   ]
+  },
+  {
+   "source": [
+    "- `alpha` (default 0.01) is the statistical significance level.\n",
+    "- `min_edge_weight` is the threshold of the edge weight, i.e., the edges with weight less than this value will be removed.\n",
     "\n",
     "Then, pass the network in form of `scipy.sparse_csr` matrix or `nx.Graph`."
    ],
@@ -113,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +208,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 53
     }
    ],
    "source": [
@@ -149,7 +217,7 @@
   },
   {
    "source": [
-    "The keys and values of this dict object are the IDs of the node and their donor scores, respectively. The recipients and their recipient scores can be obtained by "
+    "The keys and values of this dict object are the IDs of the nodes and their donor scores, respectively. The recipients and their recipient scores can be obtained by "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -178,7 +246,7 @@
    "source": [
     "# Visualization \n",
     "\n",
-    "`cidre` package provides an API to visualize small groups. To use this API, first of all, we need some additional libraries"
+    "`cidre` package provides an API to visualize small groups. To use this API, first of all, we need some additional libraries."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -231,11 +299,11 @@
     "sns.set(font_scale=1.2)\n",
     "sns.set_style(\"ticks\")\n",
     "\n",
-    "# Set up the canvs\n",
+    "# Set the figure size\n",
     "width, height = 5,5\n",
     "fig, ax = plt.subplots(figsize=(width, height))\n",
     "\n",
-    "# Plot with cidre package\n",
+    "# Plot a citation group\n",
     "cidre.DrawGroup().draw(groups[0], ax = ax)"
    ]
   }
