--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -25,13 +25,7 @@
   {
    "source": [
     "# About this notebook\n",
-    "In this example, we will walk through how to use CIDRE to detect anomalous journal groups in a citation network.  \n",
-    "\n",
-    "We model an anomalous group to be composed of *donors* and *recipient*. A donor journal excessively cites many papers in other member journals. A recipient journal excessively receives many citations from the donor journals. \n",
-    "\n",
-    "A challenge---which we attempt to address with CIDRE---is that such anomalous groups are overshadowed by communities in citation networks. It is common that journals in the same fields cite with each other because they are related. So we do not want to flag them as anomalous. \n",
-    "\n",
-    "We will demonstrate this issue and how we can tell CIDRE to take into account communities in ciation networks.\n",
+    "In this example, we walk through how to use CIDRE to detect anomalous journal groups in a citation network. We assume that you have read \"examples/example.ipynb\".\n",
     "\n",
     "To begin with we need some libraries:"
    ],
@@ -53,7 +47,7 @@
   },
   {
    "source": [
-    "Let us load the citation network of journals in 2013:"
+    "We load the citation network of journals in 2013."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -78,7 +72,7 @@
     "## About this network\n",
     "\n",
     "This network is a citation network of journals in 2013 constructed from Microsoft Academic Graph. \n",
-    "Each edge is weighted by the number of citations made to papers in prior two years.\n",
+    "Each edge is weighted by the number of citations made to papers in the prior two years.\n",
     "The following are the basic statistics of this network."
    ],
    "cell_type": "markdown",
@@ -111,7 +105,7 @@
    "source": [
     "## Communities overshadow anomalous groups\n",
     "\n",
-    "Now, let us demonstrate how communities make it difficult to find anomalous groups. To this end, we run CIDRE without telling it about the communities in the network. "
+    "Now, let us demonstrate how community structure makes it difficult to find anomalous groups. To this end, we run CIDRE without telling it about the communities in the network. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -159,9 +153,9 @@
    "source": [
     "CIDRE detected a super large group composed of more than 6000 journals, which would not be anomalous.\n",
     "\n",
-    "So what happens?\n",
+    "What happens?\n",
     "\n",
-    "This group consists of journals of related fields. Because they are frequently citing with each other, CIDRE detects them as an anomalous group. This problem---looking for anomalous group of densely connected nodes results in finding non-suspecious communities---can occur not only with CIDRE but also with other methods based on community detection. It is, therefore, crutical to discount the effect of such dominant \"normal\" communities to find \"anomalous\" groups. "
+    "This group consists of journals of related fields. Because they are frequently citing with each other, CIDRE detects them as an anomalous group. This problem---looking for anomalous group of densely connected nodes results in finding non-suspecious communities---can occur not only with CIDRE but also with other methods based on community detection. It is, therefore, crucial to discount the effect of such dominant \"normal\" communities to find \"anomalous\" groups. "
    ],
    "cell_type": "markdown",
    "metadata": {}
