--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "source": [
-    "Now, we input a network and its community structure to CIDRE. To this end, create a `cidre.Cidre` object and input `group_membership` along with some key parameters to `cidre.Cidre`."
+    "Now, we input a network and its community structure to CIDRE. To to this,　we create a `cidre.Cidre` object and input `group_membership` along with some key parameters to `cidre.Cidre`."
    ],
    "cell_type": "markdown",
    "metadata": {}
