--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -240,23 +240,39 @@
     "fig, ax = plt.subplots(figsize=(width, height))\n",
     "\n",
     "# Plot a citation group\n",
-    "cidre.DrawGroup().draw(groups[0], ax = ax)\n",
+    "cidre.DrawGroup().draw(groups[0], ax = ax)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 2\n",
+    "Let's go through another example, which is a much large empirical citation network.\n",
+    "  \n",
+    "In this example, we walk through how to use CIDRE to detect anomalous journal groups in a citation network. We assume that you have read \"examples/example.ipynb\".\n",
     "\n",
-    "# # Example 2\n",
-    "\n",
-    "# # Let's go through another example, which is a much large empirical citation network.\n",
-    "# #  \n",
-    "# In this example, we walk through how to use CIDRE to detect anomalous journal groups in a citation network. We assume that you have read \"examples/example.ipynb\".\n",
-    "#\n",
-    "# To begin with we need some libraries:\n",
-    "\n",
+    "To begin with we need some libraries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "import numpy as np\n",
     "from scipy import sparse\n",
     "import pandas as pd\n",
-    "import cidre\n",
-    "\n",
-    "# We load the citation network of journals in 2013."
+    "import cidre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load the citation network of journals in 2013."
    ]
   },
   {
