--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# Example 1\n",
     "\n",
-    "Next, we load a network. We first present an example of a small artificial network and then a larger empirical network."
+    "Next, we load a network. We first present an example of a small artificial network."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's pretend that we do not know that the network is composed of two communities and additional edges. To run CIDRE, we first need to find the communities. To use `graph-tool` package to this end, install `graph-tool` by "
+    "Let's pretend that we do not know that the network is composed of two communities plus additional edges. To run CIDRE, we first need to find the communities. To use `graph-tool` package to do this, install `graph-tool` by "
    ]
   },
   {
@@ -78,9 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's detect communities using `graph-tool` by fitting the degree-corrected stochastic block model (dcSBM) to the network and consider each block as a community.\n",
+    "Now, let's detect communities by fitting the degree-corrected stochastic block model (dcSBM) to the network and consider each detected block as a community.\n",
     "\n",
-    "Our approach hinges on the assumption that the anomalous groups are not detected by the community detection algorithm. If we allow the number of communities to be large in this example, we would find anonalous groups as communities. Therefore, we limit the number of communities to be at most 3 to prevent the SBM to detect small anomalous groups in the network. This assumption looks artificial, but we do not need to impose it in the case of large networks because small anomalous groups usually have little impact on the global community structure, and thus SBM would not find them as communities."
+    "Our approach hinges on the assumption that the anomalous groups are not detected by the community detection algorithm. If we allow the number of communities to be large in this example, we would find anonalous groups as communities. Therefore, we limit the number of communities to be at most 3 to prevent the SBM to detect small anomalous groups. This workaround is artificial. However, we do not need to impose it in the case of large networks (see Example 2 below) because small anomalous groups usually have little impact on the global community structure, and thus the SBM would not find them as communities."
    ]
   },
   {
@@ -115,7 +115,7 @@
     "    states = gt.minimize_blockmodel_dl(\n",
     "        G,\n",
     "        state_args=dict(eweight=G.ep.weight),\n",
-    "        multilevel_mcmc_args = {\"B_max\": \"B_max\": A.shape[0] if K is None else K },\n",
+    "        multilevel_mcmc_args = {\"B_max\": A.shape[0] if K is None else K },\n",
     "        **params\n",
     "    )\n",
     "    b = states.get_blocks()\n",
@@ -240,39 +240,23 @@
     "fig, ax = plt.subplots(figsize=(width, height))\n",
     "\n",
     "# Plot a citation group\n",
-    "cidre.DrawGroup().draw(groups[0], ax = ax)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 2\n",
-    "Let's go through another example, which is a much large empirical citation network.\n",
-    "  \n",
-    "In this example, we walk through how to use CIDRE to detect anomalous journal groups in a citation network. We assume that you have read \"examples/example.ipynb\".\n",
+    "cidre.DrawGroup().draw(groups[0], ax = ax)\n",
     "\n",
-    "To begin with we need some libraries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# # Example 2\n",
+    "\n",
+    "# # Let's go through another example, which is a much large empirical citation network.\n",
+    "# #  \n",
+    "# In this example, we walk through how to use CIDRE to detect anomalous journal groups in a citation network. We assume that you have read \"examples/example.ipynb\".\n",
+    "#\n",
+    "# To begin with we need some libraries:\n",
+    "\n",
     "import sys\n",
     "import numpy as np\n",
     "from scipy import sparse\n",
     "import pandas as pd\n",
-    "import cidre"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We load the citation network of journals in 2013."
+    "import cidre\n",
+    "\n",
+    "# We load the citation network of journals in 2013."
    ]
   },
   {
