--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -13,10 +13,21 @@
     "colab": {
       "name": "example1.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/skojaku/cidre/blob/second-edit/examples/example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -84,7 +95,7 @@
         "import cidre\n",
         "import networkx as nx"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +131,7 @@
         "# Visualization\n",
         "nx.draw(nx.from_scipy_sparse_matrix(A), linewidths = 1, edge_color=\"#8d8d8d\", edgecolors=\"b\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -183,7 +194,7 @@
         "!apt-get update\n",
         "!apt-get install python3-graph-tool python3-cairo python3-matplotlib"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +249,7 @@
         "    b = states.get_blocks()\n",
         "    return np.unique(np.array(b.a), return_inverse = True)[1]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +275,7 @@
       "source": [
         "group_membership = detect_community(A)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +297,7 @@
       "source": [
         "alg = cidre.Cidre(group_membership = group_membership, alpha = 0.05, min_edge_weight = 1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +320,7 @@
       "source": [
         "groups = alg.detect(A, threshold=0.15)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +344,7 @@
       "source": [
         "groups[0].donors"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +382,7 @@
       "source": [
         "groups[0].recipients"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +418,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +453,7 @@
         "# Plot a citation group\n",
         "cidre.DrawGroup().draw(groups[0], ax = ax)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +507,7 @@
         "node_table = pd.read_csv(node_file)\n",
         "A, node_labels = cidre.utils.read_edge_list(edge_file)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +541,7 @@
         "print(\"Maximum edge weight: %d\" % A.max())\n",
         "print(\"Minimum edge weight: %d\" % np.min(A.data))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +579,7 @@
         "node2com = dict(zip(node_table[\"journal_id\"], node_table[\"community_id\"]))\n",
         "group_membership = [node2com[node_labels[i]] for i in range(A.shape[0])]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +609,7 @@
         "alg = cidre.Cidre(group_membership = group_membership, alpha = 0.01, min_edge_weight = 10)\n",
         "groups = alg.detect(A, threshold=0.15)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +625,7 @@
         "print(\"The number of journals in the largest group: %d\" % np.max([group.size() for group in groups]))\n",
         "print(\"Number of groups detected: %d\" % len(groups))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +654,7 @@
       "source": [
         "groups = [group for group in groups if group.get_num_edges()>=50]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +692,7 @@
       "source": [
         "groups_sampled = [groups[i] for i in np.random.choice(len(groups), 3, replace = False)]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +717,7 @@
         "for i in range(3):\n",
         "    cidre.DrawGroup().draw(groups_sampled[i], ax = axes.flat[i])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -746,7 +757,7 @@
         "\n",
         "id2label = {k:journalid2label[v] for k, v in node_labels.items()} # This is a dictionary from ID to label, i.e., {ID:journal_name}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -781,7 +792,7 @@
         "    plotter.label_node_margin = 0.5 # Margin between labels and node\n",
         "    plotter.draw(groups_sampled[i], node_labels = id2label, ax = axes.flat[i])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
