--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -173,9 +173,9 @@
         "id": "5PsfTNsQEcVB"
       },
       "source": [
-        "Let's pretend that we do not know that the network is composed of two communities plus additional edges. To run CIDRE, we first need to find the communities. We use `graph-tool` package to do this, which can be installed `graph-tool` by \n",
+        "Let's pretend that we do not know that the network is composed of two communities plus additional edges. To run CIDRE, we first need to find the communities. We use [graph-tool package](https://graph-tool.skewed.de/) to do this, which can be installed by \n",
         "\n",
-        "```python\n",
+        "```bash\n",
         "conda install -c conda-forge graph-tool\n",
         "```\n",
         "\n",
@@ -566,7 +566,7 @@
       "source": [
         "## Communities\n",
         "\n",
-        "[In our paper](https://www.nature.com/articles/s41598-021-93572-3), we identified the communities of journals using the graph-tool. `node_table` contains the community membership of each journal, from which we prepare `group_membership` array as follows."
+        "[In our paper](https://www.nature.com/articles/s41598-021-93572-3), we identified the communities of journals using [graph-tool](https://graph-tool.skewed.de/). `node_table` contains the community membership of each journal, from which we prepare `group_membership` array as follows."
       ]
     },
     {
