--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -329,7 +329,7 @@
         "id": "60Fp9LA9EcVE"
       },
       "source": [
-        "`groups` is a list of `Group` instances. A `Group` instance represents a group of nodes detected by CIDRE, and contains information about the type of each member node (i.e., donor and recipient). We can get the donor nodes of a group, for example `groups[0]`, by"
+        "`groups` is a list of `Group` instances. A `Group` instance represents a group of nodes detected by CIDRE and contains information about the type of each member node (i.e., donor and recipient). We can get the donor nodes of a group, for example `groups[0]`, by"
       ]
     },
     {
