--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -490,7 +490,7 @@
         "\n",
         "# Example 2\n",
         "\n",
-        "Let's apply CIDRE to a much large empirical citation network, i.e., the citation network of journals in 2013."
+        "Let's apply CIDRE to a much larger empirical citation network, i.e., the citation network of journals in 2013."
       ]
     },
     {
