--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -519,8 +519,8 @@
         "## About this network\n",
         "\n",
         "This network is a citation network of journals in 2013 constructed from Microsoft Academic Graph.\n",
-        "Each edge is weighted by the number of citations made to papers in the prior two years.\n",
-        "The following are the basic statistics of this network."
+        "Each edge is weighted by the number of citations made to the papers in the prior two years.\n",
+        "The following are basic statistics of this network."
       ]
     },
     {
@@ -681,7 +681,7 @@
         "id": "sFWZTKxuEcVJ"
       },
       "source": [
-        "Let us visualize the groups detected by CIDRE. We random sample three groups to visualize."
+        "Let us visualize the groups detected by CIDRE. For expository purposes, we sample three groups to visualize uniformly at random."
       ]
     },
     {
@@ -739,10 +739,10 @@
         "id": "c-OTsIFdEcVJ"
       },
       "source": [
-        "The numbers beside the nodes are the IDs of the journals in the network. You may want to see the journal names and here is how to display them. \n",
+        "The numbers beside the nodes are the IDs of the journals in the network. To show the journals' names, we do the following. \n",
         "\n",
         "\n",
-        "First, we load node lables and make a dictionary from the ID of each node to the label:"
+        "First, we load node lables and make a dictionary that maps the ID of each node to the label:"
       ]
     },
     {
